# Slitherlink

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  BENCHMARK_RESULTS.md  CHAT_SESSION_SUMMARY.txt  CMakeLists.txt  COMPLETE_CHAT_HISTORY.txt  COMPLETE_CODE_HISTORY.md  DOCUMENTATION_COMPLETE.md  Doxyfile  OPTIMIZATION_RESULTS.md  QUICK_REFERENCE.md  README.md  SOLID_ARCHITECTURE.md  SOLID_PRINCIPLES.md  benchmark_results.txt  benchmark_suite.sh  example10x10.txt  example20x20.txt  example20x20_dense.txt  example6x6.txt  example8x8.txt  example8x8_box.txt  main.cpp  main.cpp.backup  main_broken.cpp  main_old.cpp  main_solid.cpp  test_all.sh  test_v11
BackUp_oldCode/: README.md
BackUp_oldCode/old_versions/: v01_baseline.cpp  v01_from_history.cpp  v02_threadpool.cpp  v09_from_history.cpp  v11_from_history.cpp
benchmarks/: README.md  performance_benchmark.cpp  run_benchmarks.sh
docs/: CODE_EXPORT_INDEX.md  DOCUMENTATION.md  IMPROVED_ARCHITECTURE.md  IMPROVEMENT_OPTIONS.md  README.md  VERSION_ARCHIVE_README.md
docs/analysis/: 10x10_OPTIMIZATION_JOURNEY.md  COMPLETE_VERSION_ANALYSIS.md  PUZZLE_DIFFICULTY_ANALYSIS.md  TBB_INTEGRATION_STORY.md
docs/developer/: ARCHITECTURE.md  CODE_STRUCTURE.md  README_SOLID.md  SOLID_ARCHITECTURE.md  SOLID_PRINCIPLES.md
docs/doxygen/html/: _common_8h.html  _common_8h.js  _common_8h__incl.map  _common_8h__incl.md5  _common_8h_source.html  _config_8cpp.html  _config_8cpp__incl.map  _config_8cpp__incl.md5  _config_8cpp_source.html  _config_8h.html  _config_8h.js  _config_8h__dep__incl.map  _config_8h__dep__incl.md5  _config_8h__incl.map  _config_8h__incl.md5  _config_8h_source.html  _constraint_propagator_8h.html  _constraint_propagator_8h.js  _constraint_propagator_8h__incl.map  _constraint_propagator_8h__incl.md5  _constraint_propagator_8h_source.html  _edge_8h.html  _edge_8h.js  _edge_8h__dep__incl.map  _edge_8h__dep__incl.md5  _edge_8h_source.html  _edge_selection_heuristic_8h.html  _edge_selection_heuristic_8h.js  _edge_selection_heuristic_8h__incl.map  _edge_selection_heuristic_8h__incl.md5  _edge_selection_heuristic_8h_source.html  _graph_builder_8cpp.html  _graph_builder_8cpp__incl.map  _graph_builder_8cpp__incl.md5  _graph_builder_8cpp_source.html  _graph_builder_8h.html  _graph_builder_8h.js  _graph_builder_8h__dep__incl.map  _graph_builder_8h__dep__incl.md5  _graph_builder_8h__incl.map  (+420 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  (+137 more)
docs/guides/: NAVIGATION_GUIDE.md  TESTING_GUIDE.md
docs/history/: ARCHITECTURE_MIGRATION_SUMMARY.md  ARCHITECTURE_RESTRUCTURE.md  CODE_EVOLUTION.md  CONVERSATION_HISTORY.md  DEVELOPMENT_ARCHIVE.md  REFACTORING_CHANGELOG.md  UMSETZUNG_STRATEGIE.md  VERSION_HISTORY.md
docs/history/archived/: ARCHITECTURE_IMPROVEMENTS.md  COMPLETE_CODE_HISTORY.md  FINAL_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_SUGGESTIONS.md  PROJECT_ARCHITECTURE_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md
docs/technical/: OPTIMIZATION_COMPARISON.md  OPTIMIZATION_REPORT.md  PERFORMANCE_ANALYSIS.md  PHASE2_OPTIMIZATIONS.md  PHASE3_OPTIMIZATIONS.md
docs/user/: QUICK_START.md  USER_GUIDE.md
examples/: CMakeLists.txt  puzzle_generator.cpp  simple_usage.cpp  thread_config_demo.cpp
include/: Solver.h
include/core/: Edge.h  Grid.h  Solution.h  State.h
include/factory/: SlitherlinkSolver.h  SolverFactory.h
include/interfaces/: IHeuristic.h  IPropagator.h  IValidator.h
include/io/: GridReader.h  SolutionCollector.h  SolutionPrinter.h
include/solver/: GraphBuilder.h  OptimizedPropagator.h  SmartHeuristic.h  StandardValidator.h
include/utils/: Config.h
puzzles/examples/: example10x10_dense.txt  example10x10_easy.txt  example10x10_extreme.txt  example10x10_medium.txt  example12x12_extreme.txt  example15x15.txt  example15x15_easy.txt  example15x15_hard.txt  example20x20_extreme.txt  example20x20_hard.txt  example20x20_medium.txt  example4x4_easy.txt  example4x4_medium.txt  example5x5.txt  example5x5_easy.txt  example5x5_hard.txt  example5x5_medium.txt  example6x6_hard.txt  example6x6_medium.txt  example7x7.txt  example7x7_extreme.txt  example8x8_easy.txt  example8x8_hard.txt  example8x8_medium.txt
puzzles/samples/: example12x12_easy.txt  example12x12_hard.txt  example12x12_medium.txt  example12x12_simple.txt  example5x5_extreme.txt  example7x7_easy.txt  example7x7_hard.txt  example7x7_medium.txt
puzzles/samples/10x10/: example10x10_hard.txt
puzzles/samples/15x15/: example15x15_extreme.txt  example15x15_medium.txt
puzzles/samples/20x20/: example20x20_easy.txt
puzzles/samples/4x4/: example4x4_extreme.txt  example4x4_hard.txt
puzzles/samples/6x6/: example6x6_easy.txt  example6x6_extreme.txt
puzzles/samples/8x8/: example8x8_extreme.txt  example8x8_simple.txt
results/: BENCHMARK_RESULTS.md  benchmark_live_output.txt  benchmark_results_comprehensive.txt
scripts/: add_namespaces.sh  add_namespaces_auto.sh  benchmark_suite.sh  benchmark_versions.sh  compile_all_versions.sh  comprehensive_benchmark.sh  migrate_architecture.sh  quick_sample_benchmark.sh  test_originals.sh  update_includes.sh  validate_and_benchmark.sh
src/: SmartHeuristic.cpp  Solver.cpp  State.cpp  main.cpp
src/core/: Grid.cpp  State.cpp
src/factory/: SlitherlinkSolver.cpp  SolverFactory.cpp
src/io/: GridReader.cpp  SolutionCollector.cpp  SolutionPrinter.cpp
src/solver/: GraphBuilder.cpp  OptimizedPropagator.cpp  SmartHeuristic.cpp  Solver.cpp  StandardValidator.cpp
src/utils/: Config.cpp
tests/: CMakeLists.txt  test_grid.cpp  test_solver_basic.cpp
tests/old_versions/: v01_from_history.cpp  v02_from_history.cpp  v03_from_history.cpp  v04_from_history.cpp  v05_from_history.cpp  v07_from_history.cpp  v09_from_history.cpp  v10_final.cpp  v10_from_history.cpp  version.txt
versions/: 10x10_OPTIMIZATION_JOURNEY.md  CODE_EVOLUTION.md  COMPLETE_VERSION_ANALYSIS.md  CONVERSATION_HISTORY.md  DEVELOPMENT_ARCHIVE.md  NAVIGATION_GUIDE.md  README.md  TBB_INTEGRATION_STORY.md  TESTING_GUIDE.md  UMSETZUNG_STRATEGIE.md
